--- a/index.html
+++ b/index.html
@@ -7,14 +7,36 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;400;500;600;700;800;900&display=swap"
-    rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./css/plugins.css">
   <link rel="stylesheet" href="./css/main.css">
   <title>Gulp</title>
 </head>
 
 <body>
+  <div class="container">
+    Wallace
+  </div>
+
+  <a href="" class="btn btn-primary">
+    <img src="./assets/icon-perfil.svg" alt="">
+    Logar
+  </a>
+  <a href="" class="btn btn-outline">
+    Criar conta
+  </a>
+
+  <a href="" class="game-card">
+    <div class="image">
+      <img class="logo-card" src="./assets/card-diablo-ii.png" alt="">
+      <img class="image-card" src="./assets/card-game-01.jpg" alt="">
+    </div>
+    <div class="info">
+      <h3>Diablo II: Resurrected</h3>
+      <p>RPG de ação</p>
+    </div>
+
+  </a>
   <script src="./js/plugins.js"> </script>
   <script src="./js/all.js"></script>
 </body>
