--- a/index.html
+++ b/index.html
@@ -7,14 +7,138 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;400;500;600;700;800;900&display=swap"
+    rel="stylesheet">
   <link rel="stylesheet" href="./css/plugins.css">
   <link rel="stylesheet" href="./css/main.css">
   <title>Gulp</title>
 </head>
 
 <body>
-  <div class="container">
+  <header>
+    <div class="container">
+      <div class="logo">
+        <img src="./assets/logo.svg" alt="Logo Blizzard">
+      </div>
+      <nav>
+        <ul class="menu-links">
+          <li><a href="#">Jogos <img src="./assets/arrow-down.svg" alt=""></a></li>
+          <li><a href="#">Esportes <img src="./assets/arrow-down.svg" alt=""></a></li>
+          <li><a href="#">Loja</a></li>
+          <li><a href="#">Notícias</a></li>
+          <li><a href="#">Suporte</a></li>
+        </ul>
+        <div class="buttons">
+          <a href="#" class="btn btn-outline">Criar conta</a>
+          <a href="#" class="btn btn-primary"><img src="./assets/icon-perfil.svg" alt="">Login</a>
+        </div>
+      </nav>
+    </div>
+  </header>
+
+  <section class="s-hero">
+    <div class="slide-principal ">
+      <div class="swiper-wrapper ">
+        <div class="swiper-slide slide-01 ">
+          <div class="container">
+            <div class="left-content">
+              <h2>Retorna à escuridão com o game Diablo IV</h2>
+              <p>O retorno de Lilith traz uma era de escuridão e sofrimento</p>
+              <a href="#" class="btn btn-primary"><img src="./assets/icon-perfil.svg" alt="">Jogue agora</a>
+            </div>
+
+            <div class="rigth-content">
+              <div class="logo">
+                <img src="./assets/logo-default-diablo-iv.png" alt="">
+              </div>
+              <div class="video">
+                <span>Assista o trailer</span>
+                <a href="">
+                  <div class="thumb default">
+                    <img src="./assets/thumb-1.jpg" alt="">
+                    <div class="icone">
+                      <img src="./assets/player-video.svg" alt="">
+                    </div>
+                  </div>
+                  <div class="thumb hover">
+                    <img src="./assets/gifs/giphy.gif" alt="">
+                  </div>
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="swiper-slide slide-02">
+          <div class="container">
+            <div class="left-content">
+              <h2>Novo pacote de expansão de Hearthstone</h2>
+              <p>A Horda e a Aliança se encontraram no Vale Alterac para lutar</p>
+              <a href="#" class="btn btn-primary"><img src="./assets/icon-perfil.svg" alt="">Reserve agora na
+                pré-venda</a>
+            </div>
+
+            <div class="rigth-content">
+              <div class="logo">
+                <img src="./assets/logo-default-hearthstone.png" alt="">
+              </div>
+              <div class="video">
+                <span>Assista o trailer</span>
+                <a href="">
+                  <div class="thumb default">
+                    <img src="./assets/thumb-2.jpg" alt="">
+                    <div class="icone">
+                      <img src="./assets/player-video.svg" alt="">
+                    </div>
+                  </div>
+                  <div class="thumb hover">
+                    <img src="./assets/gifs/heartstone.gif" alt="">
+                  </div>
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="swiper-slide slide-03">
+          <div class="container">
+            <div class="left-content">
+              <h2>Desbrave as Terras Sombrias em Shadowlands! </h2>
+              <p>O que jaz além do mundo que você conhece?</p>
+              <a href="#" class="btn btn-primary"><img src="./assets/icon-perfil.svg" alt="">Reserve agora na
+                pré-venda</a>
+            </div>
+
+            <div class="rigth-content">
+              <div class="logo">
+                <img src="./assets/logo-default-ww.png" alt="">
+              </div>
+              <div class="video">
+                <span>Assista o trailer</span>
+                <a href="">
+                  <div class="thumb default">
+                    <img src="./assets/thumb-3.jpg" alt="">
+                    <div class="icone">
+                      <img src="./assets/player-video.svg" alt="">
+                    </div>
+                  </div>
+                  <div class="thumb hover">
+                    <img src="./assets/gifs/bolvar-sylvanas.gif" alt="">
+                  </div>
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+
+
+
+
+  <!-- <div class="container">
     Wallace
   </div>
 
@@ -36,7 +160,7 @@
       <p>RPG de ação</p>
     </div>
 
-  </a>
+  </a> -->
   <script src="./js/plugins.js"> </script>
   <script src="./js/all.js"></script>
 </body>
