--- a/index.html
+++ b/index.html
@@ -169,22 +169,22 @@
 
           <ul class="filtro">
             <li>
-              <a href="#">
+              <a href="#battle">
                 <img src="./assets/icon-logo-battle.svg" alt="">
               </a>
             </li>
             <li>
-              <a href="">
+              <a href="#nitendo">
                 <img src="./assets/nitendo.svg" alt="">
               </a>
             </li>
             <li>
-              <a href="#">
+              <a href="#xbox">
                 <img src="./assets/xbox.svg" alt="">
               </a>
             </li>
             <li>
-              <a href="#">
+              <a href="#playstation">
                 <img src="./assets/playstation.svg" alt="">
               </a>
             </li>
@@ -192,6 +192,525 @@
           <a href="#" class="btn-all-games"><img src="./assets/icon-group-blue.svg" alt="">Ver todos jogos</a>
 
         </div>
+      </div>
+
+      <div class="tab-games-container">
+        <ul class="tab-pane-games active">
+
+          <li>
+            <a href="" class="game-card">
+              <div class="image">
+                <img class="logo-card" src="./assets/card-logo-diablo-ii.png" alt="Logo Diablo ii">
+                <img class="image-card" src="./assets/card-game-01.jpg" alt="Card Diablo ii">
+              </div>
+              <div class="info">
+                <h3>Diablo II: Resurrected</h3>
+                <p>RPG de ação</p>
+              </div>
+            </a>
+          </li>
+
+          <li>
+            <a href="" class="game-card">
+              <div class="image">
+                <img class="logo-card" src="./assets/card-logo-overwatch.png" alt="Logo Overwatch">
+                <img class="image-card" src="./assets/card-game-02.jpg" alt="Card Overwatch">
+              </div>
+              <div class="info">
+                <h3>Overwatch</h3>
+                <p>Ação em equipe</p>
+              </div>
+            </a>
+          </li>
+
+          <li>
+            <a href="" class="game-card">
+              <div class="image">
+                <img class="logo-card" src="./assets/card-logo-overwatch-2.png" alt="Logo Overwatch 2">
+                <img class="image-card" src="./assets/card-game-03.jpg" alt="Card Overwatch 2">
+              </div>
+              <div class="info">
+                <h3>Overwatch 2</h3>
+                <p>Ação em equipe</p>
+              </div>
+            </a>
+          </li>
+
+          <li>
+            <a href="" class="game-card">
+              <div class="image">
+                <img class="logo-card" src="./assets/card-logo-world-warcraft.png" alt="Logo World of Warcraft Classic">
+                <img class="image-card" src="./assets/card-game-04.jpg" alt="Card World of Warcraft Classic">
+              </div>
+              <div class="info">
+                <h3>World of Warcraft Classic</h3>
+                <p>RPG multijogador em massa</p>
+              </div>
+            </a>
+          </li>
+
+          <li>
+            <a href="" class="game-card">
+              <div class="image">
+                <img class="logo-card" src="./assets/card-logo-hearthstone.png" alt="Logo Hearthstone">
+                <img class="image-card" src="./assets/card-game-05.jpg" alt="Card Hearthstone">
+              </div>
+              <div class="info">
+                <h3>Hearthstone</h3>
+                <p>Jogo de cards estratégicos</p>
+              </div>
+            </a>
+          </li>
+
+          <li>
+            <a href="" class="game-card">
+              <div class="image">
+                <img class="logo-card" src="./assets/card-logo-heroes-of-storm.png" alt="Logo Heroes of storm">
+                <img class="image-card" src="./assets/card-game-06.jpg" alt="Card Heroes of storm">
+              </div>
+              <div class="info">
+                <h3>Heroes of storm</h3>
+                <p>RPG de ação</p>
+              </div>
+            </a>
+          </li>
+
+          <li>
+            <a href="" class="game-card">
+              <div class="image">
+                <img class="logo-card" src="./assets/card-logo-diablo-4.png" alt="Logo Diablo IV">
+                <img class="image-card" src="./assets/card-game-07.jpg" alt="Card Diablo IV">
+              </div>
+              <div class="info">
+                <h3>Diablo IV</h3>
+                <p>RPG de ação</p>
+              </div>
+            </a>
+          </li>
+
+          <li>
+            <a href="" class="game-card">
+              <div class="image">
+                <img class="logo-card" src="./assets/card-logo-warcraft-3.png" alt="Logo Warcraft III Reforged">
+                <img class="image-card" src="./assets/card-game-08.jpg" alt="Card Warcraft III Reforged">
+              </div>
+              <div class="info">
+                <h3>Warcraft III Reforged</h3>
+                <p>RPG de ação</p>
+              </div>
+            </a>
+          </li>
+
+          <li>
+            <a href="" class="game-card">
+              <div class="image">
+                <img class="logo-card" src="./assets/card-logo-diablo-3.png" alt="Logo Diablo III">
+                <img class="image-card" src="./assets/card-game-09.jpg" alt="Card Diablo III">
+              </div>
+              <div class="info">
+                <h3>Diablo III</h3>
+                <p>RPG de ação</p>
+              </div>
+            </a>
+          </li>
+
+          <li>
+            <a href="" class="game-card">
+              <div class="image">
+                <img class="logo-card" src="./assets/card-logo-starcraft-2.png" alt="Logo StarCraft II">
+                <img class="image-card" src="./assets/card-game-10.jpg" alt="Card StarCraft II">
+              </div>
+              <div class="info">
+                <h3>StarCraft II</h3>
+                <p>RPG de ação</p>
+              </div>
+            </a>
+          </li>
+
+          <li>
+            <a href="" class="game-card">
+              <div class="image">
+                <img class="logo-card" src="./assets/card-logo-starcraft.png" alt="Logo StarCraft Remastered">
+                <img class="image-card" src="./assets/card-game-11.jpg" alt="Card StarCraft Remastered">
+              </div>
+              <div class="info">
+                <h3>StarCraft Remastered</h3>
+                <p>RPG de ação</p>
+              </div>
+            </a>
+          </li>
+
+          <li>
+            <a href="#" class="game-card all-games">
+              <img src="./assets/logo.svg" alt="">
+              <span><img src="./assets/icon-group-white.svg" alt="">Ver todos jogos</span>
+            </a>
+          </li>
+
+        </ul>
+
+        <ul class="tab-pane-games" id="battle">
+
+          <li>
+            <a href="" class="game-card">
+              <div class="image">
+                <img class="logo-card" src="./assets/card-logo-diablo-ii.png" alt="Logo Diablo ii">
+                <img class="image-card" src="./assets/card-game-01.jpg" alt="Card Diablo ii">
+              </div>
+              <div class="info">
+                <h3>Diablo II: Resurrected</h3>
+                <p>RPG de ação</p>
+              </div>
+            </a>
+          </li>
+
+          <li>
+            <a href="" class="game-card">
+              <div class="image">
+                <img class="logo-card" src="./assets/card-logo-overwatch.png" alt="Logo Overwatch">
+                <img class="image-card" src="./assets/card-game-02.jpg" alt="Card Overwatch">
+              </div>
+              <div class="info">
+                <h3>Overwatch</h3>
+                <p>Ação em equipe</p>
+              </div>
+            </a>
+          </li>
+
+
+          <li>
+            <a href="" class="game-card">
+              <div class="image">
+                <img class="logo-card" src="./assets/card-logo-world-warcraft.png" alt="Logo World of Warcraft Classic">
+                <img class="image-card" src="./assets/card-game-04.jpg" alt="Card World of Warcraft Classic">
+              </div>
+              <div class="info">
+                <h3>World of Warcraft Classic</h3>
+                <p>RPG multijogador em massa</p>
+              </div>
+            </a>
+          </li>
+
+          <li>
+            <a href="" class="game-card">
+              <div class="image">
+                <img class="logo-card" src="./assets/card-logo-hearthstone.png" alt="Logo Hearthstone">
+                <img class="image-card" src="./assets/card-game-05.jpg" alt="Card Hearthstone">
+              </div>
+              <div class="info">
+                <h3>Hearthstone</h3>
+                <p>Jogo de cards estratégicos</p>
+              </div>
+            </a>
+          </li>
+
+
+
+          <li>
+            <a href="" class="game-card">
+              <div class="image">
+                <img class="logo-card" src="./assets/card-logo-diablo-4.png" alt="Logo Diablo IV">
+                <img class="image-card" src="./assets/card-game-07.jpg" alt="Card Diablo IV">
+              </div>
+              <div class="info">
+                <h3>Diablo IV</h3>
+                <p>RPG de ação</p>
+              </div>
+            </a>
+          </li>
+
+          <li>
+            <a href="" class="game-card">
+              <div class="image">
+                <img class="logo-card" src="./assets/card-logo-warcraft-3.png" alt="Logo Warcraft III Reforged">
+                <img class="image-card" src="./assets/card-game-08.jpg" alt="Card Warcraft III Reforged">
+              </div>
+              <div class="info">
+                <h3>Warcraft III Reforged</h3>
+                <p>RPG de ação</p>
+              </div>
+            </a>
+          </li>
+
+
+          <li>
+            <a href="" class="game-card">
+              <div class="image">
+                <img class="logo-card" src="./assets/card-logo-starcraft-2.png" alt="Logo StarCraft II">
+                <img class="image-card" src="./assets/card-game-10.jpg" alt="Card StarCraft II">
+              </div>
+              <div class="info">
+                <h3>StarCraft II</h3>
+                <p>RPG de ação</p>
+              </div>
+            </a>
+          </li>
+
+          <li>
+            <a href="" class="game-card">
+              <div class="image">
+                <img class="logo-card" src="./assets/card-logo-starcraft.png" alt="Logo StarCraft Remastered">
+                <img class="image-card" src="./assets/card-game-11.jpg" alt="Card StarCraft Remastered">
+              </div>
+              <div class="info">
+                <h3>StarCraft Remastered</h3>
+                <p>RPG de ação</p>
+              </div>
+            </a>
+          </li>
+
+          <li>
+            <a href="#" class="game-card all-games">
+              <img src="./assets/logo.svg" alt="">
+              <span><img src="./assets/icon-group-white.svg" alt="">Ver todos jogos</span>
+            </a>
+          </li>
+
+        </ul>
+
+        <ul class="tab-pane-games" id="nitendo">
+
+          <li>
+            <a href="" class="game-card">
+              <div class="image">
+                <img class="logo-card" src="./assets/card-logo-diablo-ii.png" alt="Logo Diablo ii">
+                <img class="image-card" src="./assets/card-game-01.jpg" alt="Card Diablo ii">
+              </div>
+              <div class="info">
+                <h3>Diablo II: Resurrected</h3>
+                <p>RPG de ação</p>
+              </div>
+            </a>
+          </li>
+          <li>
+            <a href="" class="game-card">
+              <div class="image">
+                <img class="logo-card" src="./assets/card-logo-overwatch.png" alt="Logo Overwatch">
+                <img class="image-card" src="./assets/card-game-02.jpg" alt="Card Overwatch">
+              </div>
+              <div class="info">
+                <h3>Overwatch</h3>
+                <p>Ação em equipe</p>
+              </div>
+            </a>
+          </li>
+          <li>
+            <a href="" class="game-card">
+              <div class="image">
+                <img class="logo-card" src="./assets/card-logo-overwatch-2.png" alt="Logo Overwatch 2">
+                <img class="image-card" src="./assets/card-game-03.jpg" alt="Card Overwatch 2">
+              </div>
+              <div class="info">
+                <h3>Overwatch 2</h3>
+                <p>Ação em equipe</p>
+              </div>
+            </a>
+          </li>
+
+          <li>
+            <a href="#" class="game-card all-games">
+              <img src="./assets/logo.svg" alt="">
+              <span><img src="./assets/icon-group-white.svg" alt="">Ver todos jogos</span>
+            </a>
+          </li>
+
+
+
+        </ul>
+
+        <ul class="tab-pane-games" id="xbox">
+
+          <li>
+            <a href="" class="game-card">
+              <div class="image">
+                <img class="logo-card" src="./assets/card-logo-overwatch.png" alt="Logo Overwatch">
+                <img class="image-card" src="./assets/card-game-02.jpg" alt="Card Overwatch">
+              </div>
+              <div class="info">
+                <h3>Overwatch</h3>
+                <p>Ação em equipe</p>
+              </div>
+            </a>
+          </li>
+
+          <li>
+            <a href="" class="game-card">
+              <div class="image">
+                <img class="logo-card" src="./assets/card-logo-overwatch-2.png" alt="Logo Overwatch 2">
+                <img class="image-card" src="./assets/card-game-03.jpg" alt="Card Overwatch 2">
+              </div>
+              <div class="info">
+                <h3>Overwatch 2</h3>
+                <p>Ação em equipe</p>
+              </div>
+            </a>
+          </li>
+          <li>
+            <a href="" class="game-card">
+              <div class="image">
+                <img class="logo-card" src="./assets/card-logo-hearthstone.png" alt="Logo Hearthstone">
+                <img class="image-card" src="./assets/card-game-05.jpg" alt="Card Hearthstone">
+              </div>
+              <div class="info">
+                <h3>Hearthstone</h3>
+                <p>Jogo de cards estratégicos</p>
+              </div>
+            </a>
+          </li>
+
+          <li>
+            <a href="" class="game-card">
+              <div class="image">
+                <img class="logo-card" src="./assets/card-logo-diablo-3.png" alt="Logo Diablo III">
+                <img class="image-card" src="./assets/card-game-09.jpg" alt="Card Diablo III">
+              </div>
+              <div class="info">
+                <h3>Diablo III</h3>
+                <p>RPG de ação</p>
+              </div>
+            </a>
+          </li>
+
+          <li>
+            <a href="" class="game-card">
+              <div class="image">
+                <img class="logo-card" src="./assets/card-logo-starcraft-2.png" alt="Logo StarCraft II">
+                <img class="image-card" src="./assets/card-game-10.jpg" alt="Card StarCraft II">
+              </div>
+              <div class="info">
+                <h3>StarCraft II</h3>
+                <p>RPG de ação</p>
+              </div>
+            </a>
+          </li>
+
+          <li>
+            <a href="" class="game-card">
+              <div class="image">
+                <img class="logo-card" src="./assets/card-logo-starcraft.png" alt="Logo StarCraft Remastered">
+                <img class="image-card" src="./assets/card-game-11.jpg" alt="Card StarCraft Remastered">
+              </div>
+              <div class="info">
+                <h3>StarCraft Remastered</h3>
+                <p>RPG de ação</p>
+              </div>
+            </a>
+          </li>
+
+          <li>
+            <a href="#" class="game-card all-games">
+              <img src="./assets/logo.svg" alt="">
+              <span><img src="./assets/icon-group-white.svg" alt="">Ver todos jogos</span>
+            </a>
+          </li>
+
+        </ul>
+        <ul class="tab-pane-games" id="playstation">
+          <li>
+            <a href="" class="game-card">
+              <div class="image">
+                <img class="logo-card" src="./assets/card-logo-overwatch.png" alt="Logo Overwatch">
+                <img class="image-card" src="./assets/card-game-02.jpg" alt="Card Overwatch">
+              </div>
+              <div class="info">
+                <h3>Overwatch</h3>
+                <p>Ação em equipe</p>
+              </div>
+            </a>
+          </li>
+
+          <li>
+            <a href="" class="game-card">
+              <div class="image">
+                <img class="logo-card" src="./assets/card-logo-overwatch-2.png" alt="Logo Overwatch 2">
+                <img class="image-card" src="./assets/card-game-03.jpg" alt="Card Overwatch 2">
+              </div>
+              <div class="info">
+                <h3>Overwatch 2</h3>
+                <p>Ação em equipe</p>
+              </div>
+            </a>
+          </li>
+
+
+
+
+
+          <li>
+            <a href="" class="game-card">
+              <div class="image">
+                <img class="logo-card" src="./assets/card-logo-heroes-of-storm.png" alt="Logo Heroes of storm">
+                <img class="image-card" src="./assets/card-game-06.jpg" alt="Card Heroes of storm">
+              </div>
+              <div class="info">
+                <h3>Heroes of storm</h3>
+                <p>RPG de ação</p>
+              </div>
+            </a>
+          </li>
+
+          <li>
+            <a href="" class="game-card">
+              <div class="image">
+                <img class="logo-card" src="./assets/card-logo-diablo-4.png" alt="Logo Diablo IV">
+                <img class="image-card" src="./assets/card-game-07.jpg" alt="Card Diablo IV">
+              </div>
+              <div class="info">
+                <h3>Diablo IV</h3>
+                <p>RPG de ação</p>
+              </div>
+            </a>
+          </li>
+
+
+
+          <li>
+            <a href="" class="game-card">
+              <div class="image">
+                <img class="logo-card" src="./assets/card-logo-diablo-3.png" alt="Logo Diablo III">
+                <img class="image-card" src="./assets/card-game-09.jpg" alt="Card Diablo III">
+              </div>
+              <div class="info">
+                <h3>Diablo III</h3>
+                <p>RPG de ação</p>
+              </div>
+            </a>
+          </li>
+
+          <li>
+            <a href="" class="game-card">
+              <div class="image">
+                <img class="logo-card" src="./assets/card-logo-starcraft-2.png" alt="Logo StarCraft II">
+                <img class="image-card" src="./assets/card-game-10.jpg" alt="Card StarCraft II">
+              </div>
+              <div class="info">
+                <h3>StarCraft II</h3>
+                <p>RPG de ação</p>
+              </div>
+            </a>
+          </li>
+
+          <li>
+            <a href="" class="game-card">
+              <div class="image">
+                <img class="logo-card" src="./assets/card-logo-starcraft.png" alt="Logo StarCraft Remastered">
+                <img class="image-card" src="./assets/card-game-11.jpg" alt="Card StarCraft Remastered">
+              </div>
+              <div class="info">
+                <h3>StarCraft Remastered</h3>
+                <p>RPG de ação</p>
+              </div>
+            </a>
+          </li>
+
+          <li>
+            <a href="#" class="game-card all-games">
+              <img src="./assets/logo.svg" alt="">
+              <span><img src="./assets/icon-group-white.svg" alt="">Ver todos jogos</span>
+            </a>
+          </li>
+
+        </ul>
       </div>
     </div>
   </section>
