--- a/index.html
+++ b/index.html
@@ -469,7 +469,6 @@
         </ul>
 
         <ul class="tab-pane-games" id="nitendo">
-
           <li>
             <a href="" class="game-card">
               <div class="image">
@@ -513,9 +512,6 @@
               <span><img src="./assets/icon-group-white.svg" alt="">Ver todos jogos</span>
             </a>
           </li>
-
-
-
         </ul>
 
         <ul class="tab-pane-games" id="xbox">
@@ -715,18 +711,52 @@
     </div>
   </section>
 
+  <section class="s-download">
+    <div class="overlay">
+      <div class="container">
 
-  <!-- <a href="" class="game-card">
-    <div class="image">
-      <img class="logo-card" src="./assets/card-diablo-ii.png" alt="">
-      <img class="image-card" src="./assets/card-game-01.jpg" alt="">
-    </div>
-    <div class="info">
-      <h3>Diablo II: Resurrected</h3>
-      <p>RPG de ação</p>
-    </div>
+        <div class="left-area">
+          <div class="logo">
+            <img src="./assets/battlenet.svg" alt="Logo Battlenet">
+          </div>
+          <h2>Baixe agora o battle.net</h2>
+          <ul>
+            <li>
+              <img src="./assets/icon-seus-jogos.svg" alt="">
+              <p>Seus jogos em um só lugar</p>
+            </li>
+            <li>
+              <img src="./assets/icon-conect.svg" alt="">
+              <p>Conecte-se aos seus amigos</p>
+            </li>
+            <li>
+              <img src="./assets/icon-buy.svg" alt="">
+              <p>Compre jogos e itens digitais</p>
+            </li>
+          </ul>
+          <a href="#" class="btn btn-primary">
+            <img src="./assets/icon-apple.svg" alt="Icone apple">
+            Baixar para o MacOS
+          </a>
+          <div class="aplicativo-mobile">
+            <img src="./assets/icon-phone.svg" alt="Icone phone">
+            <p>Também disponível como <span>aplicativo móvel</span></p>
+          </div>
+        </div>
 
-  </a> -->
+        <div class="right-area">
+          <div class="image1">
+            <img src="./assets/image-download-lg.png" alt="">
+          </div>
+          <div class="image2">
+            <img src="./assets/image-download-sm.png" alt="">
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+
   <script src="./js/plugins.js"> </script>
   <script src="./js/all.js"></script>
 </body>
