--- a/index.html
+++ b/index.html
@@ -756,6 +756,43 @@
     </div>
   </section>
 
+  <section class="modal">
+    <div class="overlay Modal">
+      <div class="box">
+        <div class="close">
+          <img src="./assets/x.svg" alt="Botão Fechar">
+        </div>
+        <img class="logo" src="./assets/battlenet.svg" alt="Logo battlenet">
+
+        <form action="">
+          <input type="text" placeholder="E-mail ou telefone">
+          <input type="password" placeholder="Senha">
+          <button class="btn btn-primary">Conectar-se</button>
+        </form>
+
+        <div class="others-connect">
+          <span>ou conecte-se com </span>
+          <ul>
+            <li>
+              <a href="#"><img src="./assets/google.svg" alt="Icone Google"></a>
+            </li>
+            <li>
+              <a href="#"><img src="./assets/apple.svg" alt="Icone Apple"></a>
+            </li>
+            <li>
+              <a href=""><img src="./assets/facebook.svg" alt="Icone Facebook"></a>
+            </li>
+          </ul>
+        </div>
+
+        <div class="user-account">
+          <p><a href="#">Crie uma conta</a> Battle.net de graça</p>
+          <a href="#">Não consegue logar?</a>
+        </div>
+
+      </div>
+    </div>
+  </section>
 
   <script src="./js/plugins.js"> </script>
   <script src="./js/all.js"></script>
